# aoc-2024

./: .gitignore  Cargo.toml  README.md  fpm.toml
src/: solution_01.f90  solution_02.rs  solution_03.rs
src/lib/: helper.f90
