[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false

[dependencies]
regex = "1.11.1"

[[bin]]
name = "solution_02"
path = "src/solution_02.rs"

[[bin]]
name = "solution_03"
path = "src/solution_03.rs"
